캐시삭제 및 로그로 질의처리시간을 나타내려고 했으나 실패함, 파일입출력으로 누적작성하게 만들고 실험을 진행할 예정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
+# 기본 로깅 레벨 설정
 logging.level.root=INFO
-logging.level.JenaController.JenaValidate=DEBUG
+
+# Jena 패키지의 로깅 레벨 설정
+logging.level.org.apache.jena=INFO
+
+# 로깅 설정을 logback.xml 파일과 연동
+logging.config=classpath:logback.xml
